# trackball

./: .gitignore  README.md  TODO.txt  adapter.py  gen_tarballs.sh  ndof.md  notes.txt  pull_tool.py  rp2040-pmw3360.step  trackball.py  trackball2.py  trackball_common.py  trackball_mki.md  trackball_mkii.md  update_watcher.py  usb_board.py
firmware/: CMakeLists.txt
firmware/src/: pio_spi.c  pio_spi.h  pmw3360.cc  pmw3360.h  trackball.cc
img/: mkii_in_action.webm
step/: adapter.step  ball.step  bottom.step  button0.step  button1.step  button2.step  button3.step  button_pcb0.step  button_pcb1.step  button_pcb2.step  button_pcb3.step  pipico.step  sensor_pcb1.step  sensor_pcb2.step  strip0.step  strip1.step  strip2.step  strip3.step  top.step
stl/: adapter.stl  ball.stl  bottom.stl  button0.stl  button1.stl  button2.stl  button3.stl  button_pcb0.stl  button_pcb1.stl  button_pcb2.stl  button_pcb3.stl  pipico.stl  sensor_pcb1.stl  sensor_pcb2.stl  strip0.stl  strip1.stl  strip2.stl  strip3.stl  top.stl
